--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Blake Kruppa",
+  "author": "Danae Morgan",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
