--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "nodemon": "^1.18.10",
+    "ts-node": "^8.1.0",
     "tslint": "^5.15.0",
     "typescript": "^3.4.2"
   }
