--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Danae Morgan",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^7.4.14",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "express-session": "^1.15.6"
+    "express-session": "^1.15.6",
+    "pg": "^7.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
